# car_crash

./: .clang_complete  .color_coded  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
cmake/: Cache.cmake  CompilerWarnings.cmake  FindGRPC.cmake  FindSFML2.cmake  Find_SFML.cmake  protobuf-config.cmake
src/: CMakeLists.txt  client.cpp  collision_detection.cpp  collision_detection.hpp  main.cpp  server.cpp
src/cpp/: CMakeLists.txt  client.cpp  server.cpp
src/cpp/framework/: CMakeLists.txt  collision_detection.cpp  collision_detection.hpp  i_game_application.hpp  input.hpp
src/cpp/framework/details/: CMakeLists.txt  color.hpp  mainLoop.cpp  mainLoop.hpp  rectangle_shape.cpp  rectangle_shape.hpp  render_window.cpp  render_window.hpp
src/cpp/framework/graphics/: CMakeLists.txt  color.cpp  color.hpp  mainLoop.cpp  mainLoop.hpp  rectangle_shape.cpp  rectangle_shape.hpp  render_window.cpp  render_window.hpp
src/cpp/framework/network/: CMakeLists.txt  cc_client.cpp  cc_client.hpp  cc_server.cpp  cc_server.hpp  rectangle.cpp  rectangle.hpp
src/cpp/framework/utilities/: CMakeLists.txt  client_config.hpp  collision_detection.cpp  collision_detection.hpp  input.hpp
src/cpp/game/: CMakeLists.txt  car_crash.cpp  car_crash.hpp  todo.md
src/framework/: CMakeLists.txt  collision_detection.hpp  i_game_application.hpp  input.hpp
src/framework/details/: CMakeLists.txt  graphics.cpp  graphics.hpp  mainLoop.cpp  mainLoop.hpp
src/framework/network/: CMakeLists.txt  cc_async_client.hpp  cc_async_server.hpp  cc_client.cpp  cc_client.hpp  cc_server.cpp  cc_server.hpp  rectangle.cpp  rectangle.hpp
src/framework/network/golang_server/client_main/: client.go
src/framework/network/golang_server/server_main/: server.go
src/framework/network/golang_server/utilities/: utilities.go
src/framework/network/proto/: car_crash.proto
src/game/: CMakeLists.txt  car_crash.cpp  car_crash.hpp  collision_detection.cpp  game_application.cpp  game_application.hpp  input.hpp
src/game/wrappers/: CMakeLists.txt
src/go/golang_server/car_crash/: car_crash.pb.go
src/go/golang_server/client_main/: client.go
src/go/golang_server/server_main/: server.go
src/go/golang_server/utilities/: server.go  utilities.go
src/go/tests/: server_test.go  utilities_test.go
src/impl/: CMakeLists.txt  car_crash.cpp  car_crash.hpp
src/proto/: car_crash.proto
